# ir-usb_iCodis

./: CMakeLists.txt
examples/: startup_sequence.txt
src/: TiqiaaUsb.cpp  TiqiaaUsb.hpp  ir-usb.cpp
